Bug 1631769 - Clear SourceMediaTracks' MediaSegment on forced shutdown. r=padenot

To avoid leaking graphics resources (Images) past thread-shutdown.

Differential Revision: https://phabricator.services.mozilla.com/D90277