dom/media/MediaTrackGraph.h
@@ -721,6 +721,8 @@ class SourceMediaTrack : public MediaTrack {
     bool mEnded;
     // True if the producer of this track is having data pulled by the graph.
     bool mPullingEnabled;
+    // True if the graph has notified this track of forced shutdown.
+    bool mInForcedShutdown;
   };
 
   bool NeedsMixing();
@@ -738,6 +740,18 @@ class SourceMediaTrack : public MediaTrack {
    * the Listeners on this thread.
    */
   void NotifyDirectConsumers(MediaSegment* aSegment);
+
+  void NotifyForcedShutdown() override {
+    MutexAutoLock lock(mMutex);
+    if (!mUpdateTrack) {
+      return;
+    }
+    mUpdateTrack->mInForcedShutdown = true;
+    if (!mUpdateTrack->mData) {
+      return;
+    }
+    mUpdateTrack->mData->Clear();
+  }
 
   virtual void AdvanceTimeVaryingValuesToCurrentTime(
       GraphTime aCurrentTime, GraphTime aBlockedTime) override;
